fix alignment issue with resize image

--- a/styles.css
+++ b/styles.css
@@ -136,6 +136,7 @@ strong {
 
 .mask img {
     position: absolute;
+    user-select: none;
 }
 
 .mask {
